# Industrial-Defect-Detection-and-Segmentation

./: .gitignore  LICENSE  README.md  pyproject.toml  run_pipeline.py  test_viz.py  test_viz_padim.py
src/backbones/: cnn_extractor.py  vit_extractor.py
src/datasets/: mvtec_dataset.py
src/eval/: metrics.py
src/methods/: padim.py  patchcore.py
src/utils/: visualization.py
