[project]
name = "industrial-defect-detection-and-segmentation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.1",
    "numpy>=2.4.6",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "timm>=1.0.28",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "tqdm>=4.69.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
